# auto_backlight

./: .gitignore  Cargo.toml  PkgBuilder.sh  README.md  build.rs
src/: brightness.rs  brightnessctl.rs  cli_parser.rs  lib.rs  main.rs  screens.rs  sys_tray.rs
src/screen_capture/: mod.rs
src/screen_capture/linux/: mod.rs  wayland.rs  xorg.rs
