[package]
name = "auto_backlight"
version = "2.0.0"
edition = "2021"
authors = ["Supernovatux <thulashitharan.d@gmail.com>"]
homepage = "https://github.com/Supernovatux/auto_backlight"
repository = "https://github.com/Supernovatux/auto_backlight"
description = "A tool to automatically change brightness based on screen contents"
keywords = ["brightness-control","rust","linux"]
license = "MIT"
include = ["LICENSE", "README.md","completions/auto-backlight.fish"]
build = "build.rs"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3 
overflow-checks = false
debug = 0
strip = "symbols"

[package.metadata.deb]
assets = [
    ["target/release/auto-backlight","usr/bin","755"],
    ["completions/auto-backlight.bash","usr/share/bash-completion/completions/auto-backlight.bash","644"],
    ["completions/auto-backlight.fish","usr/share/fish/vendor_completions.d/auto-backlight.fish","644"],
    ["completions/_auto-backlight","usr/share/zsh/site-functions/_auto-backlight","644"],
]

[dependencies]
display-info = "*"
dbus="*"
xcb = {version="*",features=["randr"]}
clap = { version = "*", features = ["derive"] }
log = "*"
simple_logger = {version="*",features=["colors"]}
clap-verbosity-flag = "*"
glob = "*"
ksni = "*"
fast_image_resize = "*"
futures = "*"
futures-timer = "*"

[build-dependencies]
clap = "*"
clap_complete = "*"
clap-verbosity-flag = "*"
log = "*"
[[bin]]
name = "auto-backlight"
path = "src/main.rs"