[package]
name = "auto_backlight"
version = "3.0.0"
edition = "2021"
authors = ["Supernovatux <thulashitharan.d@gmail.com>"]
homepage = "https://github.com/Supernovatux/auto_backlight"
repository = "https://github.com/Supernovatux/auto_backlight"
description = "A tool to automatically change brightness based on screen contents"
keywords = ["brightness-control","rust","linux"]
license = "MIT"
include = ["LICENSE", "README.md","completions/auto-backlight.fish"]
build = "build.rs"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3 
overflow-checks = false
debug = 0
strip = "symbols"

[package.metadata.deb]
assets = [
    ["target/release/auto-backlight","usr/bin","755"],
    ["completions/auto-backlight.bash","usr/share/bash-completion/completions/auto-backlight.bash","644"],
    ["completions/auto-backlight.fish","usr/share/fish/vendor_completions.d/auto-backlight.fish","644"],
    ["completions/_auto-backlight","usr/share/zsh/site-functions/_auto-backlight","644"],
]

[dependencies]
display-info = "0.3"
xcb = {version="1.1",features=["randr"]}
clap = { version = "3.2", features = ["derive"] }
log = "0.4"
simple_logger = {version="2.3",features=["colors"]}
clap-verbosity-flag = "1"
glob = "0.3"
ksni = "0.1.3"
fast_image_resize = "1"
crossbeam-channel = "0.5.6"
signal-hook = { version = "0.3.14", features = ["extended-siginfo"] }


[build-dependencies]
clap = "3.2"
clap_complete = "3.2"
clap-verbosity-flag = "1"
log = "0.4"
[[bin]]
name = "auto-backlight"
path = "src/main.rs"
