[package]
name = "auto_backlight"
version = "3.2.0"
edition = "2021"
authors = ["Supernovatux <thulashitharan.d@gmail.com>"]
homepage = "https://github.com/Supernovatux/auto_backlight"
repository = "https://github.com/Supernovatux/auto_backlight"
description = "A tool to automatically change brightness based on screen contents"
keywords = ["brightness-control","rust","linux"]
license = "MIT"
include = ["LICENSE", "README.md","completions/auto-backlight.fish"]
build = "build.rs"
readme = "README.md"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
opt-level = 3 
overflow-checks = false
debug = 0
strip = "symbols"

[package.metadata.deb]
assets = [
    ["target/release/auto-backlight","usr/bin","755"],
    ["completions/auto-backlight.bash","usr/share/bash-completion/completions/auto-backlight.bash","644"],
    ["completions/auto-backlight.fish","usr/share/fish/vendor_completions.d/auto-backlight.fish","644"],
    ["completions/_auto-backlight","usr/share/zsh/site-functions/_auto-backlight","644"],
]

[dependencies]
display-info = "0.3"
xcb = {version="1.1",features=["randr"]}
clap = { version = "4.1.6", features = ["derive"] }
log = "0.4"
simple_logger = {version="4.0",features=["colors"]}
clap-verbosity-flag = "2"
glob = "0.3.1"
ksni = "0.2.0"
file-lock = "2.1.9"
fast_image_resize = "2.7"
crossbeam-channel = "0.5.6"
signal-hook = "0.3.15"


[build-dependencies]
clap = "4.1.6"
clap_derive = "4.0.21"
clap_complete = "4.1.0"
clap-verbosity-flag = "2"
log = "0.4"
[[bin]]
name = "auto-backlight"
path = "src/main.rs"
